--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "digedag/cfc_league_fe",
+	"name" : "digedag/cfc-league-fe",
 	"description" : "TYPO3 extension to manage sports competitions and clubs.",
 	"version" : "1.1.0",
 	"type" : "typo3-cms-extension",
