--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
 	"name" : "digedag/cfc-league-fe",
 	"description" : "TYPO3 extension to manage sports competitions and clubs.",
-	"version" : "1.1.1",
 	"type" : "typo3-cms-extension",
 	"keywords" : [
 		"TYPO3 CMS",
@@ -10,7 +9,7 @@
 		"football"
 	],
 	"homepage" : "http://www.system25.de/",
-	"license" : "GPL-2.0+",
+	"license" : "GPL-2.0-or-later",
 	"authors" : [{
 			"name" : "René Nitzsche",
 			"email" : "rene@system25.de",
