--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,10 @@
 		"digedag/rn-base" : ">=1.8.2"
 	},
 	"autoload" : {
+		"psr-4": { "System25\\T3sports\\": "Classes" },
 		"classmap" : [
 			"actions/",
-			"Classes/",
+			"Deprecations/",
 			"filter/",
 			"hooks/",
 			"models/",
