--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 	},
 	"require" : {
 		"typo3/cms-core" : ">=6.2.0 <=8.7.99",
-		"digedag/cfc-league" : ">=1.2.0",
-		"digedag/rn-base" : ">=1.8.2"
+		"digedag/cfc-league" : "1.*",
+		"digedag/rn-base" : "1.*"
 	},
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" },
