--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
 	},
 	"require" : {
 		"typo3/cms-core" : ">=6.2.0 <=8.7.99",
-		"digedag/cfc-league" : "1.*",
-		"digedag/rn-base" : "1.*"
+		"digedag/cfc-league" : "^1.3.0",
+		"digedag/rn-base" : "^1.10.9*"
 	},
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" },
