--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"digedag/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core" : ">=6.2.0 <=8.7.99",
+		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5",
 		"digedag/cfc-league" : "^1.3.0",
 		"digedag/rn-base" : "^1.10.9"
 	},
