prepare travis builds

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,14 @@
 	"require" : {
 		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5",
 		"digedag/cfc-league" : "^1.3.0",
-		"digedag/rn-base" : "^1.10.9"
+		"digedag/rn-base" : "^1.11"
+	},
+	"require-dev": {
+		"namelesscoder/typo3-repository-client": "^1.2",
+		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0",
+		"mikey179/vfsstream": "^1.4 || ^1.6",
+		"phpunit/phpunit": "^4.7|| ^7.0",
+		"friendsofphp/php-cs-fixer": "^2.15"
 	},
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" },
@@ -39,10 +46,16 @@
 			"models/",
 			"svmarker/",
 			"table/",
-			"tests/",
 			"util/",
 			"views/"
 		]
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"System25\\T3sports\\Tests\\": "Tests/Unit/PHP",
+			"TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
+			"TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
+		}
 	},
     "config": {
         "vendor-dir": ".Build/vendor",
@@ -62,6 +75,9 @@
             "cms-package-dir": "{$vendor-dir}/typo3/cms",
             "extension-key": "cfc_league_fe",
             "web-dir": ".Build/Web"
-        }
+        },
+		"branch-alias": {
+			"dev-master": "1.x-dev"
+		}
     }
 }
