--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
 		"digedag/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5.17",
+		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5.17 || ^10.4.3",
 		"digedag/cfc-league" : "^1.4.1",
 		"digedag/rn-base" : "^1.11"
 	},
 	"require-dev": {
 		"namelesscoder/typo3-repository-client": "^1.2",
-		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0",
+		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0 || ^5.0",
 		"mikey179/vfsstream": "^1.4 || ^1.6",
 		"phpunit/phpunit": "^4.7|| ^7.0",
 		"friendsofphp/php-cs-fixer": "^2.15"
