--- a/composer.json
+++ b/composer.json
@@ -34,18 +34,16 @@
 		"namelesscoder/typo3-repository-client": "^1.2",
 		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0 || ^5.0",
 		"mikey179/vfsstream": "^1.4 || ^1.6",
-		"phpunit/phpunit": "^4.7|| ^7.0",
-		"friendsofphp/php-cs-fixer": "^2.15"
+		"phpunit/phpunit": "^6.5.14 || ^7.5.20",
+		"friendsofphp/php-cs-fixer": "^3.1.0"
 	},
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" },
 		"classmap" : [
-			"actions/",
 			"Deprecations/",
 			"models/",
 			"svmarker/",
-			"util/",
-			"views/"
+			"util/"
 		]
 	},
 	"autoload-dev": {
