--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -3,6 +3,33 @@ name: PHP Checks
 on: [push, pull_request]
 
 jobs:
+    php-lint:
+        name: "PHP Lint"
+
+        runs-on: "ubuntu-latest"
+
+        strategy:
+            matrix:
+                php-version:
+                    - "7.1"
+                    - "7.2"
+                    - "7.3"
+                    - "7.4"
+
+        steps:
+            -
+                name: "Checkout"
+                uses: "actions/checkout@v2"
+            -
+                name: "Setup PHP"
+                uses: "shivammathur/setup-php@v2"
+                with:
+                    php-version: "${{ matrix.php-version }}"
+                    coverage: none
+                    tools: composer:v2
+            - 
+                name: "Run PHP lint"
+                run: "composer tests:phplint"
     php-cs-fixer:
         name: PHP-CS-Fixer
         runs-on: ubuntu-latest
@@ -16,3 +43,66 @@ jobs:
                   php-version: 7.3
             - run: composer require friendsofphp/php-cs-fixer:2.19.0
             - run: .Build/bin/php-cs-fixer fix --diff --dry-run
+
+    php-unit:
+        name: "PHP Unit"
+
+        runs-on: "ubuntu-latest"
+
+        needs: ["php-lint", "php-qs"]
+
+        strategy:
+            fail-fast: false
+            matrix:
+                include:
+                    -
+                        typo3-version: "typo3/minimal:^9.5"
+                        php-version: "7.2"
+                    -
+                        typo3-version: "typo3/minimal:^9.5"
+                        php-version: "7.3"
+                    -
+                        typo3-version: "typo3/minimal:^9.5"
+                        php-version: "7.4"
+                    -
+                        typo3-version: "typo3/minimal:^10.4"
+                        php-version: "7.2"
+                    -
+                        typo3-version: "typo3/minimal:^10.4"
+                        php-version: "7.3"
+                    -
+                        typo3-version: "typo3/minimal:^10.4"
+                        php-version: "7.4"
+
+        steps:
+            -
+                name: "Checkout"
+                uses: "actions/checkout@v2"
+            -
+                name: "Setup PHP"
+                uses: "shivammathur/setup-php@v2"
+                with:
+                    php-version: "${{ matrix.php-version }}"
+                    extensions: "${{ env.PHP_EXTENSIONS }}"
+#            -
+#                name: "Validate composer.json and composer.lock"
+#                run: "composer validate --strict"
+            -
+                name: "Determine composer cache directory"
+                id: "determine-composer-cache-directory"
+                run: "echo \"::set-output name=directory::$(composer config cache-dir)\""
+            -
+                name: "Cache dependencies installed with composer"
+                uses: "actions/cache@v2.0.0"
+                with:
+                    path: "${{ steps.determine-composer-cache-directory.outputs.directory }}"
+                    key: "php-${{ matrix.php-version }}-composer-${{ hashFiles('composer.lock') }}"
+                    restore-keys: "php-${{ matrix.php-version }}-composer-"
+            -
+                name: "Install composer dependencies"
+                run: |
+                    composer remove --no-update typo3/cms typo3/cms-core
+                    composer require "${{ matrix.typo3-version }}"
+            -
+                name: "Run PHP unit tests"
+                run: "composer test:phpunit"
