--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -30,19 +30,50 @@ jobs:
             - 
                 name: "Run PHP lint"
                 run: "composer tests:phplint"
-    php-cs-fixer:
-        name: PHP-CS-Fixer
+    php-qs:
+        name: "PHP QS"
+
         runs-on: ubuntu-latest
+        
+        needs: php-lint
+
+        strategy:
+            matrix:
+                command:
+                    - "test:phpcs"
+#                    - "test:phpmd"
+#                    - "test:phpstan"
+                php-version:
+                    - "7.4"
         steps:
-            - uses: actions/checkout@master
-              with:
-                ref: ${{ github.ref }}
+            - name: "Checkout"
+              uses: "actions/checkout@v2"
+            
             - name: Setup PHP
               uses: shivammathur/setup-php@master
               with:
-                  php-version: 7.3
-            - run: composer require friendsofphp/php-cs-fixer:2.19.0
-            - run: .Build/bin/php-cs-fixer fix --diff --dry-run
+                  php-version: "${{ matrix.php-version }}"
+                  extensions: "${{ env.PHP_EXTENSIONS }}"
+            -
+                name: "Determine composer cache directory"
+                id: "determine-composer-cache-directory"
+                run: "echo \"::set-output name=directory::$(composer config cache-dir)\""
+            -
+                name: "Cache dependencies installed with composer"
+                uses: "actions/cache@v2.0.0"
+                with:
+                    path: "${{ steps.determine-composer-cache-directory.outputs.directory }}"
+                    key: "php-${{ matrix.php-version }}-composer-${{ hashFiles('composer.lock') }}"
+                    restore-keys: "php-${{ matrix.php-version }}-composer-"
+            -
+                name: "Install composer dependencies"
+                run: "composer install --no-interaction --no-progress --no-suggest"
+            -
+                name: "Run command"
+                run: "composer ${{ matrix.command }}"
+
+#            - run: composer require friendsofphp/php-cs-fixer
+#            - run: .Build/bin/php-cs-fixer fix --diff --dry-run
 
     php-unit:
         name: "PHP Unit"
