--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -29,7 +29,7 @@ jobs:
                     tools: composer:v2
             - 
                 name: "Run PHP lint"
-                run: "composer tests:phplint"
+                run: "composer test:phplint"
     php-qs:
         name: "PHP QS"
 
