(#57) refactor table calculation for alltime support

--- a/Tests/fixtures/util_LeagueTable.yaml
+++ b/Tests/fixtures/util_LeagueTable.yaml
@@ -106,6 +106,7 @@ league_2:
   record: 
     uid: 2
     teams: 1,2,3,4
+    # 2-Punktsystem
     point_system: 1
     tablestrategy: default
   teams: 
