#57 delete unused old league table classes

--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" },
 		"classmap" : [
-			"models/",
-			"util/"
+			"models/"
 		]
 	},
 	"autoload-dev": {
