--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
 		"typo3-ter/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5.17 || ^10.4.3",
-		"digedag/cfc-league" : "dev-master",
+		"typo3/cms-core": "^8.7 || ^9.5.17 || ^10.4.3",
+		"digedag/cfc-league" : "~1.8.0",
 		"digedag/rn-base" : "~1.15.3"
 	},
 	"require-dev": {
