--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,7 @@
 		"friendsofphp/php-cs-fixer": "^3.1.0"
 	},
 	"autoload" : {
-		"psr-4": { "System25\\T3sports\\": "Classes" },
-		"classmap" : [
-			"models/"
-		]
+		"psr-4": { "System25\\T3sports\\": "Classes" }
 	},
 	"autoload-dev": {
 		"psr-4": {
