--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
 		"typo3-ter/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core": "^8.7 || ^9.5.17 || ^10.4.3",
-		"digedag/cfc-league" : "~1.8.0",
-		"digedag/rn-base" : "~1.15.3"
+		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5",
+		"digedag/cfc-league" : "~1.9.0",
+		"digedag/rn-base" : "~1.16.0"
 	},
 	"require-dev": {
 		"namelesscoder/typo3-repository-client": "^1.2",
@@ -85,7 +85,8 @@
 			]
 		},
 		"branch-alias": {
-			"dev-master": "1.8.x-dev"
+			"dev-master": "1.8.x-dev",
+			"dev-upgrade/t311": "1.9.x-dev"
 		}
     }
 }
