--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,11 @@
 		"typo3-ter/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core": "^8.7 || ^9.5.17 || ^10.4.3",
-		"digedag/cfc-league" : "~1.8.0",
-		"digedag/rn-base" : "~1.15.3"
+		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5",
+		"digedag/cfc-league" : "~1.9.0",
+		"digedag/rn-base" : "~1.16.0"
 	},
 	"require-dev": {
-		"namelesscoder/typo3-repository-client": "^1.2",
 		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0 || ^5.0",
 		"mikey179/vfsstream": "^1.4 || ^1.6",
 		"phpunit/phpunit": "^6.5.14 || ^7.5.20",
@@ -85,7 +84,7 @@
 			]
 		},
 		"branch-alias": {
-			"dev-master": "1.8.x-dev"
+			"dev-master": "1.9.x-dev"
 		}
     }
 }
