--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
 	},
 	"require" : {
 		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5",
-		"digedag/cfc-league" : "~1.9.0",
+		"digedag/cfc-league" : "dev-upgrade/php8 as 1.9.x-dev",
 		"digedag/rn-base" : "~1.16.0"
 	},
 	"require-dev": {
-		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0 || ^5.0",
+		"nimut/testing-framework": "^1.1 || ^2.0 || ^4.0 || ^5.0 || ^6.0",
 		"mikey179/vfsstream": "^1.4 || ^1.6",
-		"phpunit/phpunit": "^6.5.14 || ^7.5.20",
+		"phpunit/phpunit": "^6.5.14 || ^7.5.20 || ^8.0",
 		"friendsofphp/php-cs-fixer": "^3.1.0"
 	},
 	"autoload" : {
