--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"typo3-ter/cfc-league-fe" : "self.version"
 	},
 	"require" : {
-		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5",
+		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5 || ^12.1",
 		"digedag/cfc-league" : "~1.10.0",
 		"digedag/rn-base" : "~1.16.0"
 	},
