--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
 			]
 		},
 		"branch-alias": {
-			"dev-master": "1.10.x-dev"
+			"dev-master": "1.10.x-dev",
+			"dev-feature/t3_12": "1.10.x-dev"
 		}
     }
 }
