--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
 	},
 	"require" : {
 		"typo3/cms-core": "^8.7 || ^9.5 || ^10.4 || ^11.5 || ^12.1",
-		"digedag/cfc-league" : "~1.10.0",
-		"digedag/rn-base" : "~1.16.0"
+		"digedag/cfc-league" : "~1.11.0",
+		"digedag/rn-base" : "~1.17.1"
 	},
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "^3.1.0",
@@ -86,8 +86,7 @@
 			]
 		},
 		"branch-alias": {
-			"dev-master": "1.10.x-dev",
-			"dev-feature/t3_12": "1.10.x-dev"
+			"dev-master": "1.11.x-dev"
 		}
     }
 }
