--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -74,50 +74,21 @@ jobs:
                     - "8.0"
                     - "8.1"
                     - "8.2"
-    php-qs:
-        name: "PHP QS"
-
+    php-cs-fixer:
+        name: PHP-CS-Fixer
         runs-on: ubuntu-latest
-        
         needs: php-lint
-
-        strategy:
-            matrix:
-                command:
-                    - "test:phpcs"
-#                    - "test:phpmd"
-#                    - "test:phpstan"
-                php-version:
-                    - "7.4"
         steps:
-            - name: "Checkout"
-              uses: "actions/checkout@v2"
-            
+            - uses: actions/checkout@master
+              with:
+                ref: ${{ github.ref }}
             - name: Setup PHP
               uses: shivammathur/setup-php@master
               with:
-                  php-version: "${{ matrix.php-version }}"
-                  extensions: "${{ env.PHP_EXTENSIONS }}"
-            -
-                name: "Determine composer cache directory"
-                id: "determine-composer-cache-directory"
-                run: "echo \"::set-output name=directory::$(composer config cache-dir)\""
-            -
-                name: "Cache dependencies installed with composer"
-                uses: "actions/cache@v2.0.0"
-                with:
-                    path: "${{ steps.determine-composer-cache-directory.outputs.directory }}"
-                    key: "php-${{ matrix.php-version }}-composer-${{ hashFiles('composer.lock') }}"
-                    restore-keys: "php-${{ matrix.php-version }}-composer-"
-            -
-                name: "Install composer dependencies"
-                run: "composer install --no-interaction --no-progress --no-suggest"
-            -
-                name: "Run command"
-                run: "composer ${{ matrix.command }}"
-
-#            - run: composer require friendsofphp/php-cs-fixer
-#            - run: .Build/bin/php-cs-fixer fix --diff --dry-run
+                  php-version: 8.1
+            - run: "composer install --no-interaction --no-progress --no-suggest"
+#            - run: composer require friendsofphp/php-cs-fixer:3.35.1
+            - run: .Build/bin/php-cs-fixer fix --diff --dry-run
 
     php-unit:
         name: "PHP Unit"
