--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
 		"digedag/rn-base" : "~1.18"
 	},
 	"require-dev": {
-		"friendsofphp/php-cs-fixer": "^3.1.0",
-		"nimut/testing-framework": "^4.0 || ^5.0 || ^6.0",
+		"friendsofphp/php-cs-fixer": "^3.46",
+		"typo3/testing-framework": "^2.0 || ^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
 		"mikey179/vfsstream": "^1.4 || ^1.6",
 		"phpcompatibility/php-compatibility": "^9.3.5",
-		"phpunit/phpunit": "^6.5.14 || ^7.5.20 || ^8.0"
+		"phpunit/phpunit": "^6.5.14 || ^7.5.20 || ^8.0 || ^9.0"
 	},
 	"autoload" : {
 		"psr-4": { "System25\\T3sports\\": "Classes" }
