--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -95,7 +95,7 @@ jobs:
 
         runs-on: "ubuntu-latest"
 
-        needs: ["php-lint", "php-qs"]
+        needs: ["php-lint", "php-cs-fixer"]
 
         strategy:
             fail-fast: false
