--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -5,9 +5,7 @@ on: [push, pull_request]
 jobs:
     php-lint:
         name: "PHP Lint"
-
-        runs-on: "ubuntu-latest"
-
+        runs-on: ubuntu-latest
         strategy:
             matrix:
                 php-version:
@@ -15,7 +13,6 @@ jobs:
                     - "7.2"
                     - "7.3"
                     - "7.4"
-
         steps:
             -
                 name: "Checkout"
@@ -32,7 +29,7 @@ jobs:
                 run: "composer test:phplint"
     php-compatibility:
         name: "PHPCompatibility"
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-latest
         needs: php-lint
         steps:
             -
@@ -92,9 +89,7 @@ jobs:
 
     php-unit:
         name: "PHP Unit"
-
-        runs-on: "ubuntu-latest"
-
+        runs-on: ubuntu-latest
         needs: ["php-lint", "php-cs-fixer"]
 
         strategy:
